[project]
name = "stackeds-tw"
version = "0.2.0"
description = "Stack EDS element maps (TIFF) into a false-colour composite."
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.5",
    "numpy>=1.22",
    "tifffile>=2022.0",
    "imagecodecs>=2023.0",
    "Pillow>=9.0",
    "PyQt5>=5.15",
]

[project.scripts]
stackEDS-TW = "stackEDS_TW:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["stackEDS_TW.py"]
sources = ["."]
